kotlin/programming-kotlin_code/functions/output/nottrailingerr.output
nottrailingerr.kts:8:43: error: no value passed for parameter 'msg'
greetMany("Tom", "Jerry", "Spike", "Hello") //ERROR
                                          ^
